specs/ast.bnf
entry ::= <node_type> <whitespace> "=" <whitespace> <node_def>
node_type ::= <identifier>
node_def ::= <identifier> |
             <identifier><modifier> |
             "auto" |
             (<node_def>) |
             "delim[" <identifier> "]<" <node_def> ">" |
             <node_def> <whitespace> <node_def>
identifier ::= <word> | <identifier> "_" <word>
word ::= <letter> | <word> <letter>
letter ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" |
           "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" |
           "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" |
           "y" | "z" | "_"
modifier ::= "*" | ",*" | "+" | ",+" | "?" | "~"
whitespace ::= " " | <whitespace><whitespace>
